--- a/PixelsActionTester/Config/Localization/Game_Compile.ini
+++ b/PixelsActionTester/Config/Localization/Game_Compile.ini
@@ -7,7 +7,9 @@ ResourceName=Game.locres
 bSkipSourceCheck=false
 bValidateFormatPatterns=true
 bValidateSafeWhitespace=false
+NativeCulture=en-001
 CulturesToGenerate=en
+CulturesToGenerate=en-001
 
 [GatherTextStep0]
 CommandletClass=GenerateTextLocalizationResource
