--- a/PixelsActionTester/Config/Localization/Game_Gather.ini
+++ b/PixelsActionTester/Config/Localization/Game_Gather.ini
@@ -5,15 +5,27 @@ SourcePath=Content/Localization/Game
 DestinationPath=Content/Localization/Game
 ManifestName=Game.manifest
 ArchiveName=Game.archive
+NativeCulture=en-001
 CulturesToGenerate=en
+CulturesToGenerate=en-001
 
 [GatherTextStep0]
-CommandletClass=GenerateGatherManifest
+CommandletClass=GatherTextFromAssets
+IncludePathFilters=%LOCPROJECTROOT%*
+ExcludePathFilters=Content/Localization/*
+PackageFileNameFilters=*.umap
+PackageFileNameFilters=*.uasset
+ShouldExcludeDerivedClasses=false
+ShouldGatherFromEditorOnlyData=false
+SkipGatherCache=false
 
 [GatherTextStep1]
-CommandletClass=GenerateGatherArchive
+CommandletClass=GenerateGatherManifest
 
 [GatherTextStep2]
+CommandletClass=GenerateGatherArchive
+
+[GatherTextStep3]
 CommandletClass=GenerateTextLocalizationReport
 bWordCountReport=true
 WordCountReportName=Game.csv
