--- a/PixelsActionTester/Config/Localization/Game_Export.ini
+++ b/PixelsActionTester/Config/Localization/Game_Export.ini
@@ -1,7 +1,9 @@
 [CommonSettings]
 SourcePath=Content/Localization/Game
 DestinationPath=Content/Localization/Game
+NativeCulture=en-001
 CulturesToGenerate=en
+CulturesToGenerate=en-001
 ManifestName=Game.manifest
 ArchiveName=Game.archive
 PortableObjectName=Game.po
