--- a/PixelsActionTester/Config/Localization/Game_GenerateReports.ini
+++ b/PixelsActionTester/Config/Localization/Game_GenerateReports.ini
@@ -4,6 +4,7 @@ DestinationPath=Content/Localization/Game
 ManifestName=Game.manifest
 ArchiveName=Game.archive
 CulturesToGenerate=en
+CulturesToGenerate=en-001
 
 [GatherTextStep0]
 CommandletClass=GenerateTextLocalizationReport
