--- a/PixelsActionTester/Config/Localization/Game_ImportDialogue.ini
+++ b/PixelsActionTester/Config/Localization/Game_ImportDialogue.ini
@@ -2,7 +2,9 @@
 SourcePath=Content/Localization/Game
 ManifestName=Game.manifest
 ArchiveName=Game.archive
+NativeCulture=en-001
 CulturesToGenerate=en
+CulturesToGenerate=en-001
 
 [GatherTextStep0]
 CommandletClass=ImportLocalizedDialogue
